cmake_minimum_required(VERSION 3.13)
project(complexType)

set(CMAKE_CXX_STANDARD 14)

#add_executable(complexType complexTypeMain.cpp complexType.h complexTypeImp.cpp complexTypeDiv.h complexTypeDivImp.cpp)
add_executable(complexType complexType.h complexTypeImp.cpp complexTypeDiv.h complexTypeDivImp.cpp)
